[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reddit-mcp-server"
version = "0.1.0"
description = "FastMCP server for Reddit API integration"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "redditwarp>=1.3.0",
    "aiohttp>=3.8.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
reddit-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]